@@ -1,3 +1,8 @@
+2021-12-15  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Pulled latest raylib ( https://github.com/raysan5/raylib/commit/0454acaacfaae4a3269d443d3d88045240f738c3 )
+	* Added generator scripts for Windows
+
 2021-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/core_storage_values.rb: Added
